# trading_bot

./: ReamMe.txt  main.py
config/: hyperparameters.json  settings.py
data/raw/: EURUSD_D1.csv
src/: callbacks.py  env_wrapper.py  evaluation.py  evolutionary_trainer.py  genetic_algorithm.py  indicator_calculator.py  live_monitor.py
trading_env_rust/: Cargo.toml
trading_env_rust/src/: lib.rs
