[package]
name = "trading_env_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "trading_env_rust"
crate-type = ["cdylib"]  # بسیار مهم: این خط پروژه را به یک ماژول پایتون تبدیل می‌کند

[dependencies]
# وابستگی اصلی برای اتصال به پایتون
pyo3 = { version = "0.21.2", features = ["extension-module"] }

# برای کار مستقیم با آرایه‌های نامپای در Rust
numpy = { version = "0.21.0", features = ["nalgebra"] }

# برای تولید اعداد تصادفی (برای ریست کردن محیط)
rand = "0.8.5"
ta = "0.5.0"